# teslabitcoindashboard

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  PUSH-TO-GITHUB.md  QUICK-DEPLOY.md  README.md  deploy-railway.sh  docker-compose.prod.yml  docker-compose.yml  fly-deploy.md  main.py  nixpacks.toml  populate-real-data.py  railway-deploy.md  railway.json  render-deploy.md  requirements.txt  setup-dev.sh  supabase-setup.md
.github/workflows/: deploy.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements-simple.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_migration.py
apps/api/app/: __init__.py  config.py  database.py  main.py  seed.py
apps/api/app/analysis/: __init__.py  scenarios.py  valuation.py
apps/api/app/api/: backtest.py  benchmarks.py  btc.py  gametheory.py  optimize.py  tesla.py  tickers.py
apps/api/app/datasources/: __init__.py  base.py  bgeometrics.py  bitcoin_data.py  fred.py  stooq.py  ycharts.py
apps/api/app/etl/: __init__.py  base.py  benchmarks.py  prices.py  run_all.py  tesla_metrics.py
apps/api/app/models/: backtest_run.py  benchmark.py  fundamental.py  news.py  price.py  reddit.py  strategy.py  tesla_metric.py  ticker.py
apps/api/app/strategies/: __init__.py  backtest_engine.py  base.py  bollinger.py  macd_rsi.py  sma_cross.py
apps/api/app/utils/: cache.py  monitoring.py  security.py
apps/web/: .eslintrc.json  .prettierrc  Dockerfile  next.config.js  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/btc/: page.tsx
apps/web/app/stock/[symbol]/: page.tsx
apps/web/app/strategies/: page.tsx
apps/web/app/tsla/: page.tsx
apps/web/components/charts/: tesla-energy.tsx  tesla-margins.tsx  tesla-overview.tsx  tesla-scenarios.tsx  tesla-vehicles.tsx
docs/: financial-app-backend.md  financial-app-frontend.md  financial-app-implementation.md  financial-app-requirements.md  financial-app-security.md  financial-app-techStack.md
infra/ci/.github/workflows/: ci.yml  docker-build.yml  release.yml
